# notepad

./: CMakeLists.txt  meson.build  notepad.desktop
